[tool.poetry]
name = "image redaction"
version = "0.1.0"
description = ""
authors = ["Vaibhavee <vaibhaveesingh89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.25.0"                  # Latest Streamlit that supports Pillow 11.x
opencv-python-headless = "^4.8.1.78"     # OpenCV for image processing
pillow = "10.0.0"                        # Compatible version of Pillow
pytesseract = "^0.3.10"                  # OCR tool for extracting text from images
spacy = "^3.6.0"                         # NLP tool for NER
faker = "^19.8.0"                        # For generating fake data
langdetect = "^1.0.9"                    # For language detection
numpy = "^1.24.4"                        # Required for image processing
spacy-transformers = "^1.1.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
streamlit = "streamlit.cli:main"         # Enables running Streamlit via `poetry run streamlit`

[tool.poetry.dev-dependencies]
pytest = "^7.0"                          # For running tests (optional, only if you plan to write tests)

[tool.poetry.plugins."spacy_factories"]
en_core_web_trf = "spacy_factories.en_core_web_trf"
xx_ent_wiki_sm = "spacy_factories.xx_ent_wiki_sm"
